data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_706.wast
;; 7. **Test Description 7:** Verify a `br_if` conditioned on the result of a logical AND between two boolean values on the stack. Incorrect handling of boolean operations can lead to spurious branches.    - **Constraint Checked:** Logical AND operations handling.    - **Differential Behavior:** Wizard Engine may consider logical AND to always resolve to true or false regardless of operands.

(assert_invalid
  (module (func $bool-and-br-if
    (block (br_if 0 (i32.and (i32.const 1) (i32.const 0))))
  ))
  "type mismatch"
)